--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "virtual-select-plugin",
-  "version": "1.0.40",
+  "name": "virtual-select-bootstrap-v5-plugin",
+  "version": "1.0.40.bs",
   "description": "A javascript plugin for dropdown with virtual scroll",
   "scripts": {
     "start": "webpack --mode development --watch",
